--- a/package.json
+++ b/package.json
@@ -29,32 +29,32 @@
     "graphql-compose": ">=2.10.1"
   },
   "devDependencies": {
-    "aws-sdk": "^2.158.0",
+    "aws-sdk": "^2.188.0",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-jest": "^21.2.0",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.1.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^4.12.0",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.37.0",
+    "eslint-plugin-flowtype": "^2.42.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-prettier": "^2.5.0",
     "express": "^4.16.1",
     "express-graphql": "^0.6.11",
-    "flow-bin": "^0.59.0",
-    "graphql": "^0.11.7",
-    "graphql-compose": "^2.10.1",
-    "jest": "^21.2.1",
-    "nodemon": "^1.12.1",
+    "flow-bin": "^0.64.0",
+    "graphql": "0.13.0-rc.1",
+    "graphql-compose": "^2.13.0",
+    "jest": "^22.1.4",
+    "nodemon": "^1.14.11",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.8.2",
+    "prettier": "^1.10.2",
     "rimraf": "^2.6.2",
-    "semantic-release": "^8.2.0"
+    "semantic-release": "^12.4.1"
   },
   "config": {
     "commitizen": {
@@ -79,6 +79,6 @@
     "lint": "eslint --ext .js ./src",
     "flow": "./node_modules/.bin/flow",
     "test": "npm run coverage && npm run lint && npm run flow",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   }
 }
