--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "graphql-compose": ">=2.10.1 || >=3.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.192.0",
+    "aws-sdk": "^2.195.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.2.2",
@@ -41,15 +41,15 @@
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.43.0",
+    "eslint-plugin-flowtype": "^2.44.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.1",
     "express-graphql": "^0.6.11",
     "flow-bin": "^0.65.0",
     "graphql": "0.13.0",
-    "graphql-compose": "^3.0.0-beta.5",
-    "jest": "^22.2.2",
+    "graphql-compose": "^3.0.4",
+    "jest": "^22.3.0",
     "nodemon": "^1.14.12",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.10.2",
