--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "babel-runtime": "^6.26.0"
   },
   "peerDependencies": {
-    "graphql-compose": ">=2.10.1 || >=3.0.0"
+    "graphql-compose": ">=2.10.1 || >=3.0.0 || >=4.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.219.1",
+    "aws-sdk": "^2.224.1",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -41,20 +41,20 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-flowtype": "^2.46.2",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "flow-bin": "^0.69.0",
+    "flow-bin": "^0.70.0",
     "graphql": "0.13.2",
-    "graphql-compose": "^3.1.1",
+    "graphql-compose": "^4.0.0",
     "jest": "^22.4.3",
     "nodemon": "^1.17.3",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.11.1",
+    "prettier": "^1.12.0",
     "rimraf": "^2.6.2",
-    "semantic-release": "^15.1.4"
+    "semantic-release": "^15.1.7"
   },
   "config": {
     "commitizen": {
