--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0-semantically-released",
   "description": "AWS Cloud API via GraphQL",
   "files": [
-    "lib"
+    "lib",
+    "mjs"
   ],
   "main": "lib/index.js",
+  "module": "mjs/index.mjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/graphql-compose/graphql-compose-aws.git"
@@ -33,6 +35,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -51,7 +54,6 @@
     "graphql-compose": "^4.4.1",
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
-    "npm-run-all": "^4.1.3",
     "prettier": "^1.13.6",
     "rimraf": "^2.6.2",
     "semantic-release": "^15.6.0"
@@ -67,9 +69,11 @@
     ]
   },
   "scripts": {
-    "build": "npm-run-all build:*",
-    "build:lib": "rimraf lib && babel src --ignore __tests__,__mocks__ -d lib",
-    "build:flow": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo $filepath | sed 's/\\/src\\//\\/lib\\//g'`.flow; done",
+    "build": "npm run build-cjs && npm run build-mjs",
+    "build-cjs": "rimraf lib && BABEL_ENV=cjs babel src --ignore __tests__,__mocks__ -d lib && COPY_TO_FOLDER=lib npm run build-flow",
+    "build-mjs": "rimraf mjs && BABEL_ENV=mjs babel src --ignore __tests__,__mocks__ -d mjs && yarn build-mjs-rename && COPY_TO_FOLDER=mjs npm run build-flow",
+    "build-mjs-rename": "find ./mjs -name \"*.js\" -exec bash -c 'mv \"$1\" \"${1%.js}\".mjs' - '{}' \\;",
+    "build-flow": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo ./${COPY_TO_FOLDER:-lib}$filepath | sed 's/.\\/src\\//\\//g'`.flow; done",
     "demo": "npm run demo-fullApi",
     "demo-fullApi": "nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/fullApi/index.js",
     "demo-introspection": "./node_modules/.bin/babel-node ./examples/introspection/generate.js",
