--- a/.babelrc
+++ b/.babelrc
@@ -1,27 +1,31 @@
 {
   "plugins": [
-    "transform-object-rest-spread",
-    "transform-flow-strip-types",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-flow-strip-types"
   ],
   "env": {
     "cjs": {
       "plugins": [
-        "transform-class-properties",
-        ["transform-runtime", { "polyfill": false }]
+        "@babel/plugin-proposal-class-properties"
       ],
-      "presets": [
-        ["env", {
-          "targets": {
-            "node": 4
-          },
-        }]
-      ],
-    },
-    "mjs": {
-      "plugins": ["transform-class-properties"],
       "presets": [
         [
-          "env",
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": 6
+            }
+          }
+        ]
+      ]
+    },
+    "mjs": {
+      "plugins": [
+        "@babel/plugin-proposal-class-properties"
+      ],
+      "presets": [
+        [
+          "@babel/preset-env",
           {
             "targets": {
               "node": "8.0.0"
@@ -33,13 +37,18 @@
       ]
     },
     "test": {
-      "plugins": ["transform-class-properties"],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties"
+      ],
       "presets": [
-        ["env", {
-          "targets": {
-            "node": "current"
-          },
-        }]
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
       ]
     }
   }
