refactor: due changes in graphql-compose@6.0.1
BREAKING CHANGE: Using API from graphql-compose@6.0.0

--- a/package.json
+++ b/package.json
@@ -25,39 +25,39 @@
   },
   "homepage": "https://github.com/graphql-compose/graphql-compose-aws#readme",
   "peerDependencies": {
-    "graphql-compose": ">=5.0.1 || >=4.0.0 || >=3.0.0 || >=2.10.1"
+    "graphql-compose": ">=6.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-flow": "^7.0.0",
-    "aws-sdk": "^2.308.0",
+    "aws-sdk": "^2.422.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "flow-bin": "^0.80.0",
-    "graphql": "14.0.0",
-    "graphql-compose": "^5.0.2",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.4",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "semantic-release": "^15.9.12"
+    "eslint": "^5.15.2",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "flow-bin": "^0.95.1",
+    "graphql": "14.1.1",
+    "graphql-compose": "^6.0.1",
+    "jest": "^24.5.0",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
+    "rimraf": "^2.6.3",
+    "semantic-release": "^15.13.3"
   },
   "config": {
     "commitizen": {
