chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -28,32 +28,32 @@
     "graphql-compose": ">=6.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-transform-flow-strip-types": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
-    "aws-sdk": "^2.422.0",
+    "aws-sdk": "^2.437.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.5.0",
+    "babel-jest": "^24.7.1",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.15.2",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-flowtype": "^3.5.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "flow-bin": "^0.95.1",
-    "graphql": "14.1.1",
-    "graphql-compose": "^6.0.1",
-    "jest": "^24.5.0",
+    "flow-bin": "^0.96.0",
+    "graphql": "14.2.1",
+    "graphql-compose": "^6.2.0",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
@@ -76,9 +76,9 @@
     "build-mjs-rename": "find ./mjs -name \"*.js\" -exec bash -c 'mv \"$1\" \"${1%.js}\".mjs' - '{}' \\;",
     "build-flow": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo ./${COPY_TO_FOLDER:-lib}$filepath | sed 's/.\\/src\\//\\//g'`.flow; done",
     "demo": "npm run demo-fullApi",
-    "demo-fullApi": "nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/fullApi/index.js",
-    "demo-introspection": "./node_modules/.bin/babel-node ./examples/introspection/generate.js",
-    "demo-partialApi": "nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/partialApi/index.js",
+    "demo-fullApi": "BABEL_ENV=cjs nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/fullApi/index.js",
+    "demo-introspection": "BABEL_ENV=cjs ./node_modules/.bin/babel-node ./examples/introspection/generate.js",
+    "demo-partialApi": "BABEL_ENV=cjs nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/partialApi/index.js",
     "watch": "jest --watch",
     "coverage": "jest --coverage",
     "lint": "eslint --ext .js ./src",
