--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0-semantically-released",
   "description": "AWS Cloud API via GraphQL",
   "files": [
-    "lib",
-    "mjs"
+    "lib"
   ],
   "main": "lib/index.js",
-  "module": "mjs/index.mjs",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/graphql-compose/graphql-compose-aws.git"
@@ -28,51 +27,43 @@
     "graphql-compose": "^7.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.9.0",
-    "@babel/node": "7.8.7",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.9.0",
-    "@babel/plugin-transform-flow-strip-types": "7.9.0",
-    "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-flow": "7.9.0",
+    "@types/express": "4.17.4",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "14.5.0",
+    "@types/jest": "26.0.10",
+    "@typescript-eslint/eslint-plugin": "3.9.0",
+    "@typescript-eslint/parser": "3.9.0",
     "aws-sdk": "2.653.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "25.2.6",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.1.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-prettier": "3.1.2",
+    "eslint": "7.7.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "3.1.4",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "flow-bin": "0.122.0",
-    "graphql": "15.0.0",
-    "graphql-compose": "7.14.1",
-    "jest": "25.2.7",
+    "graphql": "15.3.0",
+    "graphql-compose": "7.19.4",
+    "jest": "26.4.0",
     "nodemon": "2.0.2",
-    "prettier": "2.0.2",
+    "prettier": "2.0.5",
     "rimraf": "3.0.2",
-    "semantic-release": "17.0.4"
+    "semantic-release": "17.1.1",
+    "ts-jest": "26.2.0",
+    "ts-node-dev": "1.0.0-pre.57",
+    "typescript": "3.9.7"
   },
   "scripts": {
-    "build": "npm run build-cjs && npm run build-mjs",
-    "build-cjs": "rimraf lib && BABEL_ENV=cjs babel src --ignore __tests__,__mocks__ -d lib && COPY_TO_FOLDER=lib npm run build-flow",
-    "build-mjs": "rimraf mjs && BABEL_ENV=mjs babel src --ignore __tests__,__mocks__ -d mjs && yarn build-mjs-rename && COPY_TO_FOLDER=mjs npm run build-flow",
-    "build-mjs-rename": "find ./mjs -name \"*.js\" -exec bash -c 'mv \"$1\" \"${1%.js}\".mjs' - '{}' \\;",
-    "build-flow": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo ./${COPY_TO_FOLDER:-lib}$filepath | sed 's/.\\/src\\//\\//g'`.flow; done",
+    "build": "rimraf lib && tsc -p ./tsconfig.build.json",
     "demo": "npm run demo-fullApi",
-    "demo-fullApi": "BABEL_ENV=cjs nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/fullApi/index.js",
-    "demo-introspection": "BABEL_ENV=cjs ./node_modules/.bin/babel-node ./examples/introspection/generate.js",
-    "demo-partialApi": "BABEL_ENV=cjs nodemon -e js --ignore *test* --exec ./node_modules/.bin/babel-node ./examples/partialApi/index.js",
+    "demo-fullApi": "ts-node-dev --no-notify ./examples/fullApi/index.ts",
+    "demo-introspection": "ts-node-dev --no-notify ./examples/introspection/generate.ts",
+    "demo-partialApi": "ts-node-dev --no-notify ./examples/partialApi/index.ts",
     "watch": "jest --watch",
     "coverage": "jest --coverage",
-    "lint": "eslint --ext .js ./src",
-    "flow": "./node_modules/.bin/flow",
-    "test": "npm run coverage && npm run lint && npm run flow",
+    "lint": "yarn eslint && yarn tscheck",
+    "eslint": "eslint --ext .ts ./src",
+    "tscheck": "tsc --noEmit",
+    "test": "npm run coverage && npm run lint",
     "semantic-release": "semantic-release"
   }
 }
