--- a/package.json
+++ b/package.json
@@ -24,33 +24,32 @@
   },
   "homepage": "https://github.com/graphql-compose/graphql-compose-aws#readme",
   "peerDependencies": {
-    "graphql-compose": "^7.0.4"
+    "graphql-compose": "^7.0.4 || ^8.0.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.4",
+    "@types/express": "4.17.11",
     "@types/express-graphql": "^0.9.0",
-    "@types/graphql": "14.5.0",
-    "@types/jest": "26.0.10",
-    "@typescript-eslint/eslint-plugin": "3.9.0",
-    "@typescript-eslint/parser": "3.9.0",
-    "aws-sdk": "2.653.0",
-    "eslint": "7.7.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-prettier": "3.1.4",
+    "@types/jest": "26.0.23",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
+    "aws-sdk": "2.896.0",
+    "eslint": "7.25.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-prettier": "3.4.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "graphql": "15.3.0",
-    "graphql-compose": "7.19.4",
-    "jest": "26.4.0",
-    "nodemon": "2.0.2",
-    "prettier": "2.0.5",
+    "express-graphql": "0.12.0",
+    "graphql": "15.5.0",
+    "graphql-compose": "8.0.1",
+    "jest": "26.6.3",
+    "nodemon": "2.0.7",
+    "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "semantic-release": "17.1.1",
-    "ts-jest": "26.2.0",
-    "ts-node-dev": "1.0.0-pre.57",
-    "typescript": "3.9.7"
+    "semantic-release": "17.4.2",
+    "ts-jest": "26.5.5",
+    "ts-node-dev": "1.1.6",
+    "typescript": "4.2.4"
   },
   "scripts": {
     "build": "rimraf lib && tsc -p ./tsconfig.build.json",
