--- a/package.json
+++ b/package.json
@@ -24,32 +24,32 @@
   },
   "homepage": "https://github.com/graphql-compose/graphql-compose-aws#readme",
   "peerDependencies": {
-    "graphql-compose": "^7.0.4 || ^8.0.0"
+    "graphql-compose": "^7.0.4 || ^8.0.0 || ^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.11",
+    "@types/express": "4.17.12",
     "@types/express-graphql": "^0.9.0",
     "@types/jest": "26.0.23",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "aws-sdk": "2.896.0",
-    "eslint": "7.25.0",
+    "@typescript-eslint/eslint-plugin": "4.25.0",
+    "@typescript-eslint/parser": "4.25.0",
+    "aws-sdk": "2.918.0",
+    "eslint": "7.27.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.23.4",
     "eslint-plugin-prettier": "3.4.0",
     "express": "^4.17.1",
     "express-graphql": "0.12.0",
     "graphql": "15.5.0",
-    "graphql-compose": "8.0.1",
-    "jest": "26.6.3",
+    "graphql-compose": "9.0.0",
+    "jest": "27.0.3",
     "nodemon": "2.0.7",
-    "prettier": "2.2.1",
+    "prettier": "2.3.0",
     "rimraf": "3.0.2",
-    "semantic-release": "17.4.2",
-    "ts-jest": "26.5.5",
+    "semantic-release": "17.4.3",
+    "ts-jest": "27.0.1",
     "ts-node-dev": "1.1.6",
-    "typescript": "4.2.4"
+    "typescript": "4.3.2"
   },
   "scripts": {
     "build": "rimraf lib && tsc -p ./tsconfig.build.json",
